[FIX] entry content alignment for pages

--- a/wordpress/wp-content/themes/ripple/assets/less/wordpress.less
+++ b/wordpress/wp-content/themes/ripple/assets/less/wordpress.less
@@ -2586,6 +2586,19 @@ margin-left: 18px;
 	font-size: 1.2em;
 }
 
+.page .entry-content {
+	text-align: left;
+	
+	p {
+		line-height: 22px;
+	}
+	
+	h4 {
+		line-height: 1.4;
+	}
+
+}
+
 //Additional Blog Adjustments
 .blog .transaction-feed {display:none;}
 
